--- a/src/.env
+++ b/src/.env
@@ -3,9 +3,9 @@
 
 # API Configuration
 VITE_APP_ENVIRONMENT=development
-VITE_API_URL_DEVELOPMENT=https://sakhaai-letstdy.pythonanywhere.com
-VITE_API_URL_STAGING=https://sakhaai-letstdy.pythonanywhere.com
-VITE_API_URL_PRODUCTION=https://sakhaai-letstdy.pythonanywhere.com
+VITE_API_URL_DEVELOPMENT=https://sakhaai-letstdy.pythonanywhere.com/api
+VITE_API_URL_STAGING=https://sakhaai-letstdy.pythonanywhere.com/api
+VITE_API_URL_PRODUCTION=https://sakhaai-letstdy.pythonanywhere.com/api
 
 # Feature Flags
 VITE_ENABLE_TUTOR_CHAT=true
